rendu_incorrect/4-1-sort_list.trace.txt
= Host-specific information ====================================================
$> hostname; uname -msr
e1z1r2p1.42.us.org
Darwin 15.6.0 x86_64
$> date
Tue Oct 25 09:29:56 PDT 2016
$> gcc --version
Configured with: --prefix=/Applications/Xcode.app/Contents/Developer/usr --with-gxx-include-dir=/usr/include/c++/4.2.1
Apple LLVM version 8.0.0 (clang-800.0.38)
Target: x86_64-apple-darwin15.6.0
Thread model: posix
InstalledDir: /Applications/Xcode.app/Contents/Developer/Toolchains/XcodeDefault.xctoolchain/usr/bin
$> clang --version
Apple LLVM version 8.0.0 (clang-800.0.38)
Target: x86_64-apple-darwin15.6.0
Thread model: posix
InstalledDir: /Applications/Xcode.app/Contents/Developer/Toolchains/XcodeDefault.xctoolchain/usr/bin

= User files collection ========================================================
Collecting user files from Vogsphere
Repository URL: auto-exam/2016/c-exam-beginner/exam_20161025/dtse

= Git history ==================================================================
$> git -C /var/folders/lg/k4bkxskx5891dgxlw164sf0r0000gp/T/tmppThV6A/user log --pretty='%H - %an, %ad : %s'
9edb362a1f88c6290d3be3cf111fa959f92877af - Exam 42, Tue Oct 25 09:29:41 2016 -0700 : push
44451b0c987bb21183769b2d182ee5cb4215db44 - Exam 42, Tue Oct 25 09:12:27 2016 -0700 : push
 
= Collected files ==========================================
$> ls -lAR /var/folders/lg/k4bkxskx5891dgxlw164sf0r0000gp/T/tmppThV6A/user
total 8
-rw-r--r--  1 deepthought  deepthought  591 Oct 25 09:29 __GIT_HISTORY
drwxr-xr-x  4 deepthought  deepthought  136 Oct 25 09:29 ft_list_remove_if
drwxr-xr-x  4 deepthought  deepthought  136 Oct 25 09:29 sort_list

/var/folders/lg/k4bkxskx5891dgxlw164sf0r0000gp/T/tmppThV6A/user/ft_list_remove_if:
total 24
-rw-r--r--  1 deepthought  deepthought  6148 Oct 25 09:29 .DS_Store
-rw-r--r--  1 deepthought  deepthought  1302 Oct 25 09:29 ft_list_remove_if.c

/var/folders/lg/k4bkxskx5891dgxlw164sf0r0000gp/T/tmppThV6A/user/sort_list:
total 24
-rw-r--r--  1 deepthought  deepthought  6148 Oct 25 09:29 .DS_Store
-rw-r--r--  1 deepthought  deepthought  1246 Oct 25 09:29 sort_list.c
 
= sort_list ====================================================================
$> gcc -Wextra -Wall -Werror sort_list.c main.c -o user_exe 
sort_list.c:21:22: error: use of undeclared identifier 'NULL'
        while (lst->next != NULL)
                            ^
1 error generated.

Could not compile 'user_exe'
Grade: 0

= Final grade: 0 ===============================================================
